--- a/styles.css
+++ b/styles.css
@@ -120,9 +120,11 @@ body {
 }
 
 .about p {
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1.6;
     margin-bottom: 20px;
+    text-align: justify;
+    width: 90%;
 }
 
 .about a {
@@ -130,8 +132,10 @@ body {
     text-decoration: none;
 }
 
+
 /* General Card Styling */
-.card {
+.card 
+{
     display: flex;
     background-color: #f4f4f9;
     border-radius: 8px;
@@ -141,6 +145,17 @@ body {
     gap: 20px;
     align-items: center;
 }
+
+.Job,
+.Education {
+    background-color: #dfffe4;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    gap: 20px;
+}
+
 
 /* Image/GIF Section */
 .card-image {
@@ -257,6 +272,16 @@ body {
     font-weight: 400; /* Normal font weight */
 }
 
+.timeline-description ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    margin-top: 10px;
+}
+
+.timeline-description li {
+    margin-bottom: 5px;
+    margin-left: 10px;
+}
 
 
 
@@ -280,7 +305,7 @@ body {
   top: 15px;
   left: -28px;
   width: 1px;
-  height: 100%;
+  height: 80%;
   background-color: #888; /* Grey color for the vertical line */
 }
 
