--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,8 @@ body {
 }
 
 .about p {
-  font-size: 14px;
+  font-weight: 300; /* Light font weight */
+  font-size: 90%;
   line-height: 1.6;
   margin-bottom: 1rem;
   text-align: justify;
