--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: #f4f4f9;
   display: flex;
   justify-content: center;
@@ -77,7 +77,7 @@ body {
 /* Sidebar */
 .sidebar {
   width: 100%;
-  max-width: 300px;
+  max-width: 330px;
   min-width: 100px;
   height: 100%;
   background-color: #333;
@@ -88,9 +88,9 @@ body {
 
 .sidebar img {
   width: 100%;
-  max-width: 150px;
+  max-width: 220px;
   height: 100%;
-  max-height: 150px;
+  max-height: 220px;
   border-radius: 50%;
   margin-bottom: 20px;
   border: 0.5vh solid #ffffff;
@@ -133,7 +133,7 @@ body {
 
 .about p {
   font-weight: 300; /* Light font weight */
-  font-size: 90%;
+  font-size: 1rem;
   line-height: 1.6;
   margin-bottom: 1rem;
   text-align: justify;
@@ -198,7 +198,11 @@ body {
 
 .card-content p {
   margin: 0 0 10px 0;
-  width: 95%;
+  width: 90%;
+  font-weight: 300;
+  font-size: 1rem;
+  text-align: justify;
+  line-height: 1.6;
   color: #666;
 }
 
