--- a/styles.css
+++ b/styles.css
@@ -243,13 +243,15 @@ body {
 }
 
 /* Research */
-.timeline-title h3 {
+
+.publication-title h3, 
+.experience-title h3 {
   font-size: 100%;
   line-height: 1.3;
   margin-bottom: 0.5rem;
 }
 
-.timeline-duration {
+.experience-duration {
   color: #eccb5e; /* Gold-like color */
   font-weight: 400; /* Normal font weight */
   line-height: 1.6;
@@ -257,73 +259,120 @@ body {
   margin-left: 1em;
 }
 
-.timeline-category {
+.experience-category {
   font-size: 80%; /* Assuming --fs-7 was small, replaced it with 14px */
   color: #888; /* Grey color for less emphasis */
   margin-bottom: 0.5rem;
   margin-left: 1em;
 }
 
-.timeline-description {
-  color: #666; /* Medium grey for description text */
-  font-weight: 300; /* Light font weight */
+
+
+.publication-authors {
   font-size: 90%;
+  font-weight: 400;
+  color: #5a5a5a; /* Grey color for less emphasis */
+  margin-bottom: 0.5rem;
+  margin-left: 1em;
+  line-height: 1.4;
+}
+
+.publication-conference {
+  font-size: 90%;
+  font-weight: 400;
+  color: #5a5a5a; /* Grey color for less emphasis */
+  margin-bottom: 0.5rem;
+  margin-left: 1em;
+  line-height: 1.4;
+  font-style: italic;
+}
+
+.publication-conference a {
+  color: #00ccff; /* Blue color for links */
+  text-decoration: none; /* Remove underline from links */  
+}
+
+.publication-button {
+    color: #00ccff;
+    font-size: 90%;
+    text-decoration: none;
+    background-color: #fff;
+    padding: 0.2rem 0.4rem;
+    margin: 0.5vh 1em;
+    border: 2px solid #00ccff;
+    border-radius: 5px;
+    display: inline-block;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.publication-button:hover {
+  color: #fff;
+  background-color: #00ccff;
+}
+
+
+.experience-description {
+  font-size: 90%;
+  font-weight: 300; /* Light font weight */
+  color: #666; /* Medium grey for description text */
+  margin-left: 1em;
   line-height: 1.6;
   width: 90%;
   text-align: justify;
-  margin-left: 1em;
 }
 
-.timeline-description a {
+.experience-description a {
   color: #00ccff; /* Blue color for links */
   text-decoration: none; /* Remove underline from links */
   font-weight: 400; /* Normal font weight */
 }
 
-.timeline-description ul {
+.experience-description ul {
   list-style-type: disc;
   padding-left: 1em;
   margin-top: 1em;
 }
 
-.timeline-description li {
+.experience-description li {
   margin-bottom: 5px;
   margin-left: 10px;
 }
 
-.timeline-item {
+.experience-item {
   position: relative;
   margin-left: 3em;
   padding-bottom: 2em;
 }
 
-.timeline-item:not(:last-child) {
+.experience-item:not(:last-child) {
   margin-bottom: 1em;
 }
 
-.timeline-item::before {
+.experience-item::before {
   content: "";
   position: absolute;
   top: 15px;
   left: -28px;
   width: 1px;
   height: 80%;
-  background-color: #888; /* Grey color for the vertical line */
+  background-color: #dfdfdf; /* Grey color for the vertical line */
 }
 
-.timeline-item:not(:last-child)::before {
+.experience-item:not(:last-child)::before {
   height: calc(100% + 30px);
 }
 
-.timeline-circle {
+.experience-circle {
   position: absolute;
-  top: 15px;
+  top: 5px;
   left: -33px;
   width: 10px;
   height: 10px;
-  background-color: #848484;
+  background-color: #ababab;
   border-radius: 50%;
-  box-shadow: 0 0 0 4px #b2b2b2;
+  box-shadow: 0 0 0 4px #dfdfdf;
 }
 
 /* Link Card Container */
