--- a/styles/all.css
+++ b/styles/all.css
@@ -1,3 +1,22 @@
+:root {
+  --font-family: "Roboto", sans-serif;
+  --lightest-color: #fcfcff;
+  --light-second-color: #fff7ec;
+  --light-third-color: #fed59b;
+  --darkest-color: #001524;
+  --primary-color: #ffb236;
+  --secondary-color: #ff7d00;
+
+  --heading-color: #15616d;
+  --category-color: #5e5f6c;
+  --description-color: #7d7d7d;
+  --constrast-color: #f99136;
+
+  --h3-color: var(--heading-color);
+  --h4-color: var(--category-color);
+  --p-color: var(--description-color);
+}
+
 /* Basic Styles */
 * {
   margin: 0;
@@ -6,17 +25,61 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
-  background-color: #f4f4f9;
+  font-family: var(--font-family);
+  background-color: var(--light-second-color);
   display: flex;
   justify-content: center;
   padding: 20px;
 }
 
+a {
+  color: var(--primary-color);
+  text-decoration: none;
+  font-weight: 400;
+  transition: color 0.1s ease-in;
+}
+
+a:hover {
+  color: var(--secondary-color);
+}
+
+p {
+  color: var(--p-color);
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.6;
+  margin-bottom: 1rem;
+  text-align: justify;
+}
+
+h2 {
+  color: #000000;
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 1rem;
+}
+
+h3 {
+  color: var(--h3-color);
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 0.8rem;
+}
+
+h4 {
+  color: var(--h4-color);
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 1.3;
+  margin-bottom: 0.5rem;
+}
+
 /* Navigation Bar */
 .navbar {
   width: 100%;
-  background-color: #333;
+  background-color: var(--darkest-color);
   position: fixed;
   top: 0;
   left: 0;
@@ -36,14 +99,12 @@ body {
 }
 
 .nav-list li a {
-  color: #fff;
-  text-decoration: none;
+  color: var(--lightest-color);
   font-size: 18px;
-  transition: color 0.1s ease-in;
 }
 
 .nav-list li a:hover {
-  color: #00ccff;
+  color: var(--primary-color);
 }
 
 /* Default styles for menu icon and nav-list */
@@ -54,46 +115,47 @@ body {
   width: 30px;
 }
 
-/* drawing the hamburger icon */
 .menu-icon span {
   height: 3px;
-  background-color: #fff;
+  background-color: var(--lightest-color);
   margin: 5px 0;
   transition: 0.4s;
 }
 
-/* Page Container */
+/* the box in the body */
 .container {
   display: flex;
-  max-width: 1400px;
+  max-width: 1200px;
   width: 100%;
-  background: #fff;
+  background: var(--lightest-color);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   overflow: hidden;
   margin: 5em auto;
 }
 
-/* Sidebar */
+
 .sidebar {
-  width: 100%;
-  max-width: 330px;
+  max-width: 500px;
   min-width: 100px;
   height: 100%;
-  background-color: #333;
-  color: #fff;
+  background-color: var(--darkest-color);
+  color: var(--lightest-color);
   text-align: center;
   padding: 1em 2em;
+  position: sticky;
+  top: 0;
 }
 
 .sidebar img {
+  
   width: 100%;
   max-width: 220px;
   height: 100%;
   max-height: 220px;
   border-radius: 50%;
   margin-bottom: 20px;
-  border: 0.5vh solid #ffffff;
+  border: 0.5vh solid var(--lightest-color);
   object-fit: cover;
 }
 
@@ -103,18 +165,25 @@ body {
 }
 
 .sidebar p {
-  font-size: 1em;
-  margin-bottom: 1em;
-  line-height: 1.5;
+  color: var(--lightest-color);
+  font-size: 90%;
+  font-weight: 400;
+  margin-bottom: 1rem;
+  text-align:center
 }
 
 /* Social Links */
 .social-links a {
+  font-size: 1.2rem;
   text-decoration: none;
-  color: #fff;
+  color: var(--lightest-color);
   margin: 0 10px;
   margin-top: 20px;
-  font-size: 20px;
+}
+
+.social-links a:hover {
+  color: var(--primary-color);
+
 }
 
 .main-content,
@@ -124,39 +193,17 @@ body {
   margin: 1em 2em;
 }
 
-/* Section Headings */
-.main-content h2,
-.about h2 {
-  font-size: 28px;
-  margin-bottom: 20px;
-}
-
 .about p {
-  font-weight: 300; /* Light font weight */
-  font-size: 1rem;
-  line-height: 1.6;
-  margin-bottom: 1rem;
-  text-align: justify;
-  width: 90%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
-.about a {
-  color: #00ccff;
-  text-decoration: none;
-  transition: color 0.3s ease-in;
-}
-
-.about a:hover {
-  color: #0041c2;
-}
-
-/* General Card Styling */
 .card {
   display: flex;
-  background-color: #f4f4f9;
+  background-color: var(--light-second-color);
+  padding: 1em;
   border-radius: 1em;
   margin-bottom: 1.5em;
-  padding: 1em;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   gap: 20px;
   align-items: center;
@@ -164,17 +211,16 @@ body {
 
 .Job,
 .Education {
-  background-color: #f7f3ff;
+  background-color: var(--light-second-color);
+  padding: 1em;
   border-radius: 1em;
   margin-bottom: 1.5em;
-  padding: 1em;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   gap: 20px;
 }
 
-/* Image/GIF Section */
 .card-image {
-  flex: 0 0 100%; /* Ensures the image takes up only the necessary space */
+  flex: 0 0 100%;
   max-width: 400px;
 }
 
@@ -188,40 +234,41 @@ body {
 /* Content Section */
 .card-content {
   flex: 1; /* Allows the content section to take up the remaining space */
-  font-size: 90%;
 }
 
 .card-content h3 {
-  margin: 0 0 10px 0;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
+}
+
+.card-content h4 {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: var(--category-color);
+  margin-bottom: 0.5rem;
 }
 
 .card-content p {
-  margin: 0 0 10px 0;
   width: 90%;
-  font-weight: 300;
-  font-size: 1rem;
-  text-align: justify;
-  line-height: 1.6;
-  color: #666;
 }
 
 .card-button {
-  color: #fff;
+  display: inline-block;
+  cursor: pointer;
+  color: var(--lightest-color);
+  background-color: var(--primary-color);
   text-decoration: none;
-  background-color: #00ccff;
+  text-align: center;
+  font-size: 90%;
   padding: 10px 20px;
-  margin: 0.5vh 0.3vh;
   border: none;
   border-radius: 5px;
-  display: inline-block;
-  text-align: center;
-  cursor: pointer;
+  margin: 0.5vh 0.3vh;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .card-button:hover {
-  background-color: #0056b3;
+  color: var(--lightest-color);
+  background-color: var(--secondary-color);
   transform: scale(1.05);
 }
 
@@ -231,28 +278,30 @@ body {
   justify-content: center;
   width: 60px;
   height: 60px;
-  background-color: #fff;
-  color: #000;
+  background-color: var(--lightest-color);
+  color: var(--darkest-color);
   border-radius: 5px;
   margin-right: 10px;
   /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); */
 }
 
 .icon-box i {
-  font-size: 20px;
+  font-size: 1rem;
 }
 
 /* Research */
 
-.publication-title h3, 
-.experience-title h3 {
-  font-size: 100%;
+.publication-title, 
+.experience-title {
+  color: var(--heading-color);
+  font-size: 1rem;
+  font-weight: 500;
   line-height: 1.3;
   margin-bottom: 0.5rem;
 }
 
 .experience-duration {
-  color: #eccb5e; /* Gold-like color */
+  color: var(--constrast-color); /* Gold-like color */
   font-weight: 400; /* Normal font weight */
   line-height: 1.6;
   margin-bottom: 0.5rem;
@@ -260,46 +309,42 @@ body {
 }
 
 .experience-category {
-  font-size: 80%; /* Assuming --fs-7 was small, replaced it with 14px */
-  color: #888; /* Grey color for less emphasis */
+  font-size: 85%; 
+  color: var(--category-color); 
   margin-bottom: 0.5rem;
   margin-left: 1em;
 }
 
-
-
 .publication-authors {
   font-size: 90%;
-  font-weight: 400;
-  color: #5a5a5a; /* Grey color for less emphasis */
+  width: 90%;
+  font-weight: 350;
+  color: var(--description-color);
   margin-bottom: 0.5rem;
   margin-left: 1em;
   line-height: 1.4;
 }
 
+.publication-date,
 .publication-conference {
   font-size: 90%;
   font-weight: 400;
-  color: #5a5a5a; /* Grey color for less emphasis */
+  color: var(--description-color);
   margin-bottom: 0.5rem;
   margin-left: 1em;
   line-height: 1.4;
   font-style: italic;
 }
 
-.publication-conference a {
-  color: #00ccff; /* Blue color for links */
-  text-decoration: none; /* Remove underline from links */  
-}
 
 .publication-button {
-    color: #00ccff;
+    color: var(--primary-color);
     font-size: 90%;
     text-decoration: none;
-    background-color: #fff;
+    background-color: var(--lightest-color);
     padding: 0.2rem 0.4rem;
-    margin: 0.5vh 1em;
-    border: 2px solid #00ccff;
+    margin: 0.5vh 0.1vh;
+    border: 2px solid var(--primary-color);
     border-radius: 5px;
     display: inline-block;
     text-align: center;
@@ -308,26 +353,21 @@ body {
 }
 
 .publication-button:hover {
-  color: #fff;
-  background-color: #00ccff;
+  color: var(--lightest-color);
+  background-color: var(--primary-color);
 }
 
 
 .experience-description {
   font-size: 90%;
-  font-weight: 300; /* Light font weight */
-  color: #666; /* Medium grey for description text */
+  font-weight: 300;
+  color: var(--description-color); 
   margin-left: 1em;
   line-height: 1.6;
   width: 90%;
   text-align: justify;
 }
 
-.experience-description a {
-  color: #00ccff; /* Blue color for links */
-  text-decoration: none; /* Remove underline from links */
-  font-weight: 400; /* Normal font weight */
-}
 
 .experience-description ul {
   list-style-type: disc;
@@ -357,11 +397,11 @@ body {
   left: -28px;
   width: 1px;
   height: 80%;
-  background-color: #dfdfdf; /* Grey color for the vertical line */
+  background-color: var(--darkest-color)
 }
 
 .experience-item:not(:last-child)::before {
-  height: calc(100% + 30px);
+  height: calc(80% + 30px);
 }
 
 .experience-circle {
@@ -370,12 +410,12 @@ body {
   left: -33px;
   width: 10px;
   height: 10px;
-  background-color: #ababab;
+  background-color: var(--darkest-color);
   border-radius: 50%;
-  box-shadow: 0 0 0 4px #dfdfdf;
+  box-shadow: 0 0 0 4px #d6d6d6;
 }
 
-/* Link Card Container */
+
 .link-card-container {
   display: flex;
   flex-wrap: wrap;
@@ -388,18 +428,17 @@ body {
 /* Link Card */
 .link-card {
   display: flex;
+  width: calc(50% - 20px);
+  min-height: 300px;
+  background-color: var(--light-second-color);
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
-  width: calc(50% - 20px);
-  min-height: 300px;
   padding: 20px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease,
-    background-color 0.3s ease;
-  background-color: #f8f8f8;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
 }
 
 /* Video Container */
@@ -419,16 +458,15 @@ body {
 .link-card:hover {
   transform: scale(1.05); /* Slightly enlarge the card */
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Increase box-shadow */
-  background-color: #c1e7ff;
+  background-color: var(--light-third-color);
 }
 
 .link-card:hover .thumbnail {
-  transform: scale(1.1); /* Slightly enlarge the image */
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Add shadow to image */
-  opacity: 1; /* Keep the image visible */
+  transform: scale(1.1); 
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  opacity: 1; 
 }
 
-/* Basic Styles */
 * {
   margin: 0;
   padding: 0;
@@ -444,6 +482,10 @@ body {
   .sidebar {
     max-width: 100%;
     padding: 1em;
+  }
+  .sidebar img {
+    max-width: 5rem;
+    max-height: 5rem;
   }
   .main-content,
   .about {
@@ -471,7 +513,7 @@ body {
     width: 70%;
     height: 50vh;
     border-radius: 2%;
-    background-color: #333;
+    background-color: var(--darkest-color);
     align-self: auto;
     align-items: center;
     justify-content: center;
@@ -509,7 +551,7 @@ body {
   .menu-icon span {
     /* height: px; */
     width: 20px;
-    background-color: #556aa1; /* Default color */
+    background-color: var(--secondary-color); /* Default color */
     height: 4px;
     border-radius: 3px;
     margin: 2px 0;
@@ -518,7 +560,7 @@ body {
 
   /* Change color when menu is open (when .active is added) */
   .menu-icon.active span {
-    background-color: #fff;
+    background-color: var(--lightest-color);
   }
 
   /* Transform the top line into the top part of "X" */
