--- a/styles/all.css
+++ b/styles/all.css
@@ -15,6 +15,37 @@
   --h3-color: var(--heading-color);
   --h4-color: var(--category-color);
   --p-color: var(--description-color);
+
+  --navbar-height: 3.5rem;
+  
+}
+/* animations */
+@keyframes fade-in-up {
+  from {
+    opacity: 0;
+    transform: translateY(30rem);
+    
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+} 
+
+@keyframes fade-in-down {
+  from {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+html {
+  /* scroll-behavior: auto !important; */
+  scroll-behavior: smooth;
 }
 
 /* Basic Styles */
@@ -78,10 +109,11 @@ h4 {
 
 /* Navigation Bar */
 .navbar {
-  width: 100%;
-  background-color: var(--darkest-color);
   position: fixed;
   top: 0;
+  height: 3.5rem;
+  width: 100%;
+  background-color: var(--darkest-color);
   left: 0;
   z-index: 10;
 }
@@ -89,18 +121,23 @@ h4 {
 .nav-list {
   list-style: none;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   padding-bottom: 1em;
   padding-top: 1em;
+  padding-right: 10rem;
 }
 
 .nav-list li {
   margin: 0 20px;
+  align-items: center;
+  text-align: center;
+  height: 100%;
 }
 
 .nav-list li a {
   color: var(--lightest-color);
   font-size: 18px;
+  font-weight: 300;
 }
 
 .nav-list li a:hover {
@@ -197,28 +234,64 @@ h4 {
 
 }
 
-.main-content,
-.about {
+.main-content{
   flex-direction: column;
   width: 100%;
-  max-width: 70%;
   margin: 1em 2em;
 }
+
+.about {
+  padding-top: 5rem;
+  margin-bottom: 10rem;
+}
+
 
 .about p {
   padding-left: 5%;
   padding-right: 5%;
+  font-size: 1.4rem;
+  width: 75%;
 }
+
+
+.about p li b {
+  
+  color: var(--primary-color);
+}
+
+.content {
+  /* margin-top: 5rem; */
+  /* margin-bottom: 10rem; */
+  padding-top: 10rem;
+  opacity: 0;
+  animation-name: fade-in-up;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-timeline: view();
+  animation-range: entry 0% cover 80%;
+}
+
+.content h1 {
+  color: var(--heading-color);
+  font-size: 2.5rem;
+  font-weight: 500;
+  line-height: 1.3;
+  margin-bottom: 1.5rem;
+}
+
 
 .card {
   display: flex;
   background-color: var(--light-second-color);
   padding: 1em;
   border-radius: 1em;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 1.5em;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   gap: 20px;
   align-items: center;
+  width: 90%
 }
 
 .Job,
@@ -233,7 +306,7 @@ h4 {
 
 .card-image {
   flex: 0 0 100%;
-  max-width: 400px;
+  max-width: 300px;
 }
 
 .card-image img {
