--- a/styles/slider.css
+++ b/styles/slider.css
@@ -13,7 +13,7 @@
 }
 .slider-wrapper {
     position: relative;
-    max-width: 45rem;
+    max-width: 100%;
     max-height: 30rem;
     width: 100%;
     height: 100%;
@@ -106,6 +106,10 @@
 .slide-image-wrapper:hover .slide-overlay-text {
     opacity: 1;
     transform: translate(-50%, -50%) translateY(-0.5rem);
+}
+
+.slide-overlay-text b {
+    font-weight: 700;
 }
 
 
