--- a/styles/all.css
+++ b/styles/all.css
@@ -246,10 +246,10 @@ h4 {
 
 
 .about p {
-  /* padding-left: 5%; */
+  padding-left: 5%;
   padding-right: 5%;
   font-size: 1.3rem;
-  width: 75%;
+  width: 90%;
 }
 
 .about p b {
